--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
+    "type-fest": "^3.12.0",
     "typescript": "^5.1.6"
   }
 }
