Rearrange some components with better names

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:prep": "shx mkdir ./build",
     "build:tsc": "tsc --project ./tsconfig.json",
     "build:alias": "tsc-alias --project tsconfig.json",
-    "dev": "npm-run-all build dev:run",
-    "dev:run": "node ./build/main.js",
+    "dev:cli": "npm-run-all build dev:cli:run",
+    "dev:cli:run": "node ./build/cli.js",
     "test": "npm-run-all test:lint:fix test:tsc test:unit",
     "test:tsc": "tsc --noemit --skipLibCheck",
     "test:lint": "eslint --ext .ts ./src",
