--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "test",
+  "name": "nyte-graf",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "npm-run-all build:clean build:prep build:tsc build:alias",
+    "build": "npm-run-all build:clean build:prep build:tsc build:alias build:assets build:rollup",
     "build:clean": "shx rm -rf ./build",
     "build:prep": "shx mkdir ./build",
     "build:tsc": "tsc --project ./tsconfig.json",
     "build:alias": "tsc-alias --project tsconfig.json",
+    "build:assets": "npm-run-all build:assets:web",
+    "build:assets:web": "shx cp -r src/web/public ./build/web/public",
+    "build:rollup": "npm-run-all build:rollup:web",
+    "build:rollup:web": "rollup --config ./rollup-web.config.js",
     "dev:cli": "npm-run-all build dev:cli:run",
     "dev:cli:run": "node ./build/cli.js",
+    "dev:web": "npm-run-all build dev:web:run",
+    "dev:web:run": "node ./build/web.js",
     "test": "npm-run-all test:lint:fix test:tsc test:unit",
     "test:tsc": "tsc --noemit --skipLibCheck",
     "test:lint": "eslint --ext .ts ./src",
@@ -18,6 +24,12 @@
     "test:unit": "echo LOL"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.4.1",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "cross-env": "^7.0.3",
@@ -28,10 +40,15 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
+    "rollup": "^3.26.2",
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
     "type-fest": "^3.12.0",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "lodash": "^4.17.21"
   }
 }
