--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "lodash": "^4.17.21"
+    "express": "^4.18.2"
   }
 }
