--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/express": "^4.17.17",
+    "@types/geometric": "^2.5.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.1",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
@@ -49,6 +50,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "geometric": "^2.5.4",
     "lodash": "^4.17.21"
   }
 }
