--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/geometric": "^2.5.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.1",
+    "@types/redux-actions": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "cross-env": "^7.0.3",
@@ -49,8 +51,14 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
+    "@reduxjs/toolkit": "^1.9.5",
+    "escape-string-regexp": "^5.0.0",
     "express": "^4.18.2",
     "geometric": "^2.5.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "redux": "^4.2.1",
+    "redux-actions": "^3.0.0",
+    "reselect": "^4.1.8"
   }
 }
