Refactor to support multiple build outputs

--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "build": "npm-run-all build:clean build:prep build:tsc build:alias build:assets build:rollup",
     "build:clean": "shx rm -rf ./build",
     "build:prep": "shx mkdir ./build",
-    "build:tsc": "tsc --project ./tsconfig.json",
-    "build:alias": "tsc-alias --project tsconfig.json",
+    "build:tsc": "npm-run-all build:tsc:script build:tsc:nyte-graf",
+    "build:tsc:script": "tsc --project tsconfig/tsconfig.script.json",
+    "build:tsc:nyte-graf": "tsc --project tsconfig/tsconfig.nyte-graf.json",
+    "build:alias": "npm-run-all build:alias:script build:alias:nyte-graf",
+    "build:alias:script": "tsc-alias --project tsconfig/tsconfig.script.json",
+    "build:alias:nyte-graf": "tsc-alias --project tsconfig/tsconfig.nyte-graf.json",
     "build:assets": "npm-run-all build:assets:web",
-    "build:assets:web": "shx cp -r src/web/public ./build/web/public",
+    "build:assets:web": "shx cp -r src/web/public ./build/dist/web/public",
     "build:rollup": "npm-run-all build:rollup:web",
-    "build:rollup:web": "rollup --config ./rollup-web.config.js",
+    "build:rollup:web": "rollup --config rollup-web.config.js",
     "dev:cli": "npm-run-all build dev:cli:run",
-    "dev:cli:run": "node ./build/cli.js",
+    "dev:cli:run": "node ./build/dist/cli.js",
     "dev:web": "npm-run-all build dev:web:run",
-    "dev:web:run": "node ./build/web.js",
+    "dev:web:run": "node ./build/dist/web.js",
     "test": "npm-run-all test:lint:fix test:tsc test:unit",
     "test:tsc": "tsc --noemit --skipLibCheck",
     "test:lint": "eslint --ext .ts ./src",
