--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "nyte-graf",
   "compilerOptions": {
     "module": "ESNext",
     "target": "ESNext",
@@ -7,8 +7,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
-    "outDir": "build",
+    "baseUrl": "./",
     "paths": {
       "~nyte-graf-core/*": ["src/core/*"],
       "~nyte-graf-block/*": ["src/block/*"],
