--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "npm-run-all": "^4.1.5",
@@ -61,6 +63,9 @@
     "express": "^4.18.2",
     "geometric": "^2.5.4",
     "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-konva": "^18.2.10",
     "redux": "^4.2.1",
     "redux-actions": "^3.0.0",
     "reselect": "^4.1.8"
