--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/geometric": "^2.5.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.1",
+    "@types/react-dom": "^18.2.7",
     "@types/redux-actions": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
@@ -62,6 +63,7 @@
     "escape-string-regexp": "^5.0.0",
     "express": "^4.18.2",
     "geometric": "^2.5.4",
+    "konva": "^9.2.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
