Implement selection, dimension and position providers

--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "build:rollup:web": "rollup --config rollup-web.config.js",
     "dev:cli": "npm-run-all build dev:cli:run",
     "dev:cli:run": "node ./build/dist/cli.js",
-    "dev:web": "npm-run-all build dev:web:run",
+    "dev:web": "npm-run-all --parallel dev:web:dev dev:watch",
+    "dev:web:dev": "npm-run-all build dev:web:run",
     "dev:web:run": "node ./build/dist/web.js",
+    "dev:watch": "npm-run-all dev:watch:run",
+    "dev:watch:run": "ts-node --esm --experimentalSpecifierResolution=node script/watcher.ts",
     "test": "npm-run-all test:lint:fix test:tsc test:unit",
     "test:tsc": "tsc --noemit --skipLibCheck",
     "test:lint": "eslint --ext .ts ./src",
@@ -38,8 +41,10 @@
     "@types/node": "^20.4.1",
     "@types/react-dom": "^18.2.7",
     "@types/redux-actions": "^2.6.2",
+    "@types/shelljs": "^0.8.12",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
+    "chokidar": "^3.5.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
@@ -51,6 +56,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "rollup": "^3.26.2",
+    "shelljs": "^0.8.5",
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
