--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "react/display-name": "off",
     "react-hooks/exhaustive-deps": "error",
     "@typescript-eslint/explicit-member-accessibility": "error",
     "@typescript-eslint/no-explicit-any": "off",
